2004-12-18  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.hh: Remove obsolete comment.

2004-12-18  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_delete_dir.at: New bug report.
	* testsuite.at: Call it.

2004-12-18  Julio M. Merino Vidal  <jmmv@menta.net>

	* commands.cc: Homogenize help message for 'ls' with the one shown
	by 'list'.

2004-12-18  Julio M. Merino Vidal  <jmmv@menta.net>

        * ChangeLog: Add missing entries for several modifications I did
        in December 6th and 3rd.

2004-12-18  Julio M. Merino Vidal  <jmmv@menta.net>

	* tests/t_checkout_dir.at: New test triggering the bug I fixed
	  previously in the checkout command, verifying that directory
	  creation and chdir succeed.
	* testsuite.at: Add new test.

2004-12-18  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Add log entry for <jmmv@menta.net>'s last change.
	* std_hooks.lua: Check exit status of external merge commands.
	
2004-12-18  Julio M. Merino Vidal  <jmmv@menta.net>

	* commands.cc: Include cerrno, cstring,
	boost/filesystem/exception.hpp.
	(checkout): Verify that directory creation and chdir succeeded.
	
2004-12-18  Nathaniel Smith  <njs@codesourcery.com>

	* diff_patch.cc (struct hunk_offset_calculator): Remove dead
	code.  (I believe it was used by the old, non-extent-based
	merging.)
	(calculate_hunk_offsets): Likewise.
	(struct hunk_consumer): Move next to rest of unidiff code.
	(walk_hunk_consumer): Likewise.

2004-12-17  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_keys.at: 
	* tests/t_attr.at: 
	* tests/t_patch_vs_drop_add.at: 
	* tests/t_merge2_add_drop_add.at: 
	* tests/t_add_drop_add.at: 
	* tests/t_add_patch_drop_add.at: 
	* tests/t_patch_drop_add.at: Remove priority notes, since these
	are no longer bugs.

2004-12-17  graydon hoare  <graydon@pobox.com>

	* tests/t_merge_2.at: Works now, remove xfail.

2004-12-17  graydon hoare  <graydon@pobox.com>

	* tests/t_merge_1.at: Remove AT_CHECK(false) and xfail.