@@ -316,3 +316,5 @@ m4_include(tests/t_persistent_server_revision.at)
 m4_include(tests/t_persistent_server_keys.at)
 m4_include(tests/t_fmerge_normalize.at)
 m4_include(tests/t_delete_dir.at)
+m4_include(tests/t_migrate_schema.at)
+m4_include(tests/t_dump_load.at)
